--- a/404.md
+++ b/404.md
@@ -1,3 +1,25 @@
 ---
 permalink: /404.html
 ---
+
+<!DOCTYPE HTML>
+
+<html lang="en">
+
+<head>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <title>Oops, 404 again!</title>
+</head>
+
+<body style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <p style="text-align:center">
+        <name>Oops, 404 again!</name>
+        <br>
+        <img src="https://reinhardgrassmann.github.io/image/404.gif" style="width: 100%; max-width: 100%; height: auto;">
+        <br>
+        <a href="https://reinhardgrassmann.github.io/"> Take me to the Homepage
+        </a>
+    </p>
+</body>
+
+</html>
