404 is now ready :)

--- a/404.md
+++ b/404.md
@@ -1,21 +1,30 @@
-<!DOCTYPE HTML>
-
 <html lang="en">
 
-<head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>Oops, 404 again!</title>
-</head>
+<h1 style="text-align:center">
+Oops, 404 again!
+</h1>
 
 <body style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <p style="text-align:center">
-        <name>Oops, 404 again!</name>
+        It looks like you tripped over my 404 page while looking for something.
         <br>
-        <img src="https://reinhardgrassmann.github.io/image/404.gif" style="width: 100%; max-width: 100%; height: auto;">
+        <img src="images/404.gif" style="width: 100%; max-width: 100%; height: auto;">
         <br>
         <a href="https://reinhardgrassmann.github.io/"> Take me to the Homepage
         </a>
     </p>
 </body>
+
+<foot>
+    <p style="text-align:left;font-size:small;color:#808080;">
+    Video shows dynamic get up with a Nao robot (Humanoid Robotics Lab, 2016).
+    Implemented algorithm is based on the approach presented by Yasuo Kuniyoshi et al.
+    <br>
+    <br>
+    Kuniyoshi, Yasuo, et al. 
+    "Dynamic roll-and-rise motion by an adult-size humanoid robot." 
+    Journal of the Robotics Society of Japan 23.6 (2005): 706-717.
+    </p>
+</foot>
 
 </html>
