minor changes on the 404 page

--- a/404.md
+++ b/404.md
@@ -10,20 +10,20 @@ Oops, 404 again!
         <br>
         <img src="images/404.gif" style="width: 100%; max-width: 100%; height: auto;">
         <br>
-        <a href="https://reinhardgrassmann.github.io/"> Take me to the Homepage
+        <a href="https://reinhardgrassmann.github.io/"> Get up and take me to the Homepage
         </a>
     </p>
 </body>
 
 <foot>
     <p style="text-align:left;font-size:small;color:#808080;">
-    Video shows dynamic get up with a Nao robot (Humanoid Robotics Lab, 2016).
-    Implemented algorithm is based on the approach presented by Yasuo Kuniyoshi et al.
+    Video shows dynamic getting-up with a Nao robot (Humanoid Robotics Lab, 2016).
+    We implemented an algorithm based on the approach presented by Yasuo Kuniyoshi et al.
     <br>
     <br>
-    Kuniyoshi, Yasuo, et al. 
-    "Dynamic roll-and-rise motion by an adult-size humanoid robot." 
-    Journal of the Robotics Society of Japan 23.6 (2005): 706-717.
+    Kuniyoshi, Y., Ohmura, Y., Terada, K. and Nagakubo, A., 2005.
+    <i>"Dynamic roll-and-rise motion by an adult-size humanoid robot."</i> 
+    Journal of the Robotics Society of Japan, 23(6), pp.706-717.
     </p>
 </foot>
 
