--- a/404.md
+++ b/404.md
@@ -25,6 +25,7 @@ Oops, 404 again!
     <i>"Dynamic roll-and-rise motion by an adult-size humanoid robot."</i> 
     Journal of the Robotics Society of Japan, 23(6), pp.706-717.
     </p>
+    <a href="https://www.jstage.jst.go.jp/article/jrsj1983/23/6/23_6_706/_pdf"> Japanese version </a>
 </foot>
 
 </html>
