Updated bib files

--- a/data/GrassmannBurgner-Kahrs_et_al_Frontiers_2022.bib
+++ b/data/GrassmannBurgner-Kahrs_et_al_Frontiers_2022.bib
@@ -2,5 +2,7 @@
   title = {FAS -- A Fully Actuated Segment for Tendon-Driven Continuum Robots},
   author = {Grassmann, Reinhard M. and Rao, Priyanka and Peyron, Quentin and Burgner-Kahrs, Jessica},
   journal = {Frontiers in Robotics and AI},
-  year = {2022}
+  volume = {9},
+  year = {2022},
+  doi = {10.3389/frobt.2022.873446}
 }
