updated ICRA2024 and Frontiers 2024

--- a/data/GrassmannSenykBurgner-Kahrs_ICRA_2024.bib
+++ b/data/GrassmannSenykBurgner-Kahrs_ICRA_2024.bib
@@ -2,7 +2,7 @@
   title={On the Disentanglement of Tube Inequalities in Concentric Tube Continuum Robots},
   author={Grassmann, Reinhard M. and Senyk, Anastasiia and Burgner-Kahrs, Jessica},
   booktitle={IEEE International Conference on Robotics and Automation},
-  pages={},
+  pages={8166--8172},
   year={2024},
   organization={IEEE}
 }
