--- a/404.md
+++ b/404.md
@@ -17,7 +17,7 @@ Oops, 404 again!
 
 <foot>
     <p style="text-align:left;font-size:small;color:#808080;">
-    Video shows dynamic getting-up with a Nao robot (Humanoid Robotics Lab, 2016).
+    The video shows a dynamic getting up with a Nao robot (Humanoid Robotics Lab, 2016).
     We implemented an algorithm based on the approach presented by Yasuo Kuniyoshi et al.
     <br>
     <br>
