--- a/data/GrassmannBurgner-Kahrs_arXiv_2025a.bib
+++ b/data/GrassmannBurgner-Kahrs_arXiv_2025a.bib
@@ -1,5 +1,6 @@
 @article{GrassmannBurgner-Kahrs_2025,
   title = {Displacement-Actuated Continuum Robots: A Joint Space Abstraction},
   author={Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
+  journal = {arXiv}
   year = {2025}
 }
