--- a/data/GrassmannBurgner-Kahrs_arXiv_2025.bib
+++ b/data/GrassmannBurgner-Kahrs_arXiv_2025.bib
@@ -1,7 +1,6 @@
 @article{GrassmannBurgner-Kahrs_arXiv_2025,
-  title = {Clarke Coordinates Are Generalized Improved State Parametrization
-for Continuum Robots},
+  title = {Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots},
   author={Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
-  journal = {arXiv},
+  journal = {arXiv preprint arXiv:2503.12265},
   year = {2025}
 }
