--- a/data/GrassmannBurgner-Kahrs_arXiv_2025a.bib
+++ b/data/GrassmannBurgner-Kahrs_arXiv_2025a.bib
@@ -1,6 +1,6 @@
 @article{GrassmannBurgner-Kahrs_2025,
   title = {Displacement-Actuated Continuum Robots: A Joint Space Abstraction},
   author={Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
-  journal = {arXiv},
+  journal = {arXiv preprint arXiv:2503.16778},
   year = {2025}
 }
