--- a/data/GrassmannBurgner-Kahrs_RSS_2019.bib
+++ b/data/GrassmannBurgner-Kahrs_RSS_2019.bib
@@ -1,6 +1,7 @@
 @inproceedings{GrassmannBurgner-Kahrs_RSS_2019,
-  title={On the Merits of Joint Space and Orientation Representations in Learning the Forward Kinematics in SE(3)},
-  author={Grassmann, Reinhard and Burgner-Kahrs, Jessica},
+  title = {On the Merits of Joint Space and Orientation Representations in Learning the Forward Kinematics in SE(3)},
+  author = {Grassmann, Reinhard and Burgner-Kahrs, Jessica},
   year = {2019},
   booktitle = {Robotics: Science and Systems},
+  doi = {10.15607/RSS.2019.XV.017},
 }
