--- a/data/GrassmannBurgner-Kahrs_arXiv_2024a.bib
+++ b/data/GrassmannBurgner-Kahrs_arXiv_2024a.bib
@@ -1,6 +1,6 @@
 @article{GrassmannBurgner-Kahrs_arXiv_2024a,
   title = {Clarke Transform - A Fundamental Tool for Continuum Robotics Clarke Transform and Encoder-Decoder Architecture for Arbitrary Joints Locations in Displacement-Actuated Continuum Robots},
-  author={Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
-  journal = {arXiv},
+  author = {Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
+  journal = {arXiv preprint arXiv:2409.16501},
   year = {2024}
 }
