--- a/data/GrassmannBurgner-Kahrs_arXiv_2024b.bib
+++ b/data/GrassmannBurgner-Kahrs_arXiv_2024b.bib
@@ -1,6 +1,6 @@
 @article{GrassmannBurgner-Kahrs_arXiv_2024b,
   title = {Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control},
-  author={Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
-  journal = {arXiv},
+  author = {Grassmann, Reinhard M. and Burgner-Kahrs, Jessica},
+  journal = {arXiv preprint arXiv:2412.16422},
   year = {2024}
 }
