--- a/data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib
+++ b/data/GrassmannBurgner-Kahrs_et_al_arXiv_2023.bib
@@ -1,5 +1,5 @@
 @article{GrassmannBurgner-Kahrs_et_al_arXiv_2023,
-  title = {Open Continuum Robotics – One Actuation Module to Create them All},
+  title = {Open Continuum Robotics -– One Actuation Module to Create them All},
   author = {Grassmann, Reinhard M. and Shentu, Chengnan and Hamoda, Taqi and Dewi, Puspita Triana and Burgner-Kahrs, Jessica},
   journal = {arXiv preprint arXiv:2304.11850},
   year = {2023}
